# ci_cd

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  test.txt  tox.ini
.github/workflows/: cd.yml  ci.yml
src/ci_cd/: hello_world.py
tests/: test_hello_world.py  test_hello_world_2.py
