[metadata]
name = ci_cd
version = 0.0.1
description = CI/CD workshop
long_description = file: README.md
keywords = hello world
author = Nebium
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3 :: 3.8
    Programming Language :: Python :: 3 :: 3.9

[options]
package_dir =
    =src
packages = find_namespace:
python_requires = >=3.8
zip_safe = False
include_package_data = True
install_requires =
    biopython==1.81


[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest>=7.1.1
    pytest-cov>=3.0.0
    mypy>=0.942
    flake8>=4.0.1
    tox>=3.25.0

[options.package_data]
ci_cd = py.typed

[flake8]
max-line-length = 160